style buttons and fix the deckbutton being the wrong size (using flexbox)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ button:hover {
 #playingSurface {
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     padding-bottom: 4rem;
 }
@@ -80,16 +80,14 @@ button:hover {
 #deck {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    width: 100%;
-    height: 300px;
+    align-items: center;
 }
 
 #deckButton {
     background-image: url("https://static.vecteezy.com/system/resources/thumbnails/008/854/548/small_2x/poker-card-casino-3d-design-elements-free-png.png");
     background-color: transparent;
-    height: 35%;
-    padding: 191%;
+    /*height: 35%;*/
+    padding: 5rem;
     transform: rotate(78deg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -98,9 +96,9 @@ button:hover {
 
 #card-img {
     height: 194px;
-    margin-left: 170px;
+    /*margin-left: 170px;
     margin-right: -78px;
-    margin-top: 97px;
+    margin-top: 97px;*/
 }
 
 #inPlay {
@@ -122,15 +120,14 @@ button:hover {
 
 #playButtons {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    gap: 2rem;
 }
 
 #hiButton {
     padding-inline: 3rem;
-    margin-top: 6rem;
 }
 
 #loButton {
@@ -186,6 +183,13 @@ button:hover {
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MEDIA QUERIES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
+/* -- DIFFERENT PHONE SIZES (400px and up) */
+@media screen and (min-width: 400px) {
+    #deckButton {
+        padding: 25%;
+    }
+}
+
 /* -- MEDIUM DEVICES (tablets and up -- ≥768px) */
 @media screen and (min-width: 768px) {
 
@@ -228,6 +232,11 @@ button:hover {
     }
 
     #playButtons {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
         width: 25%;
     }
 
@@ -254,7 +263,7 @@ button:hover {
 
 /* -- LARGE DEVICES (tablets and up -- 1366 px) */
 @media screen and (min-width: 1366px) {
-    #title{
+    #title {
         padding-bottom: 12rem;
     }
 
